# tasks

.github/workflows/: api.yml  ui.yml
services/tasks_api/: .gitignore  README.md  config.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/tasks_api/docker/dynamodb/: shared-local-instance.db
services/tasks_ui/: package-lock.json  package.json  serverless.yml
services/tasks_ui/src/: aws-exports.js
