[project]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielsantanaf",email = "gabrielsantanaf09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mangum (>=0.19.0,<0.20.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "bandit (>=1.8.6,<2.0.0)"
]

